<resources>
    <string name="app_name">recipe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_saved">Saved</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="title_details">Details</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_vegan">Vegan</string>
    <string name="title_vegetarian">Vegetarian</string>
    <string name="title_servings">Servings</string>
    <string name="title_preparation_time">Preparation Time</string>
    <string name="title_cheap">Cheap</string>
    <string name="title_gluten_free">Gluten Free</string>
    <string name="title_dairy_free">Dairy Free</string>
    <string name="title_metric">Metric</string>
    <string name="title_imperial">Imperial</string>
    <string name="title_step">Step</string>
    <string name="title_step_length">Step Length</string>
    <string name="title_search_recipes_no_results">We could not find any recipes for your search :-(</string>
    <string name="title_search_recipes">Search for a Recipe…</string>
    <string name="title_cuisine">Cuisine</string>
    <string name="title_diet">Diet</string>
    <string name="title_intolerances">Intolerances</string>
    <string name="title_please_select">Please Select…</string>
    <string name="title_meal_type">Meal Type</string>
    <string name="title_max_ready_time_min">Maximum Ready Time (Minutes)</string>
    <string name="title_caffeine_mg">Caffeine (mg)</string>
    <string name="title_min">Minimum</string>
    <string name="title_max">Maximum</string>
    <string name="title_calcium_mg">Calcium (mg)</string>
    <string name="title_carbohydrates_g">Carbohydrates (g)</string>
    <string name="title_cholesterol_mg">Cholesterol (mg)</string>
    <string name="title_filter">Filter</string>
    <string name="title_fat_g">Fat (g)</string>
    <string name="title_fiber_g">Fiber (g)</string>
    <string name="title_iron_mg">Iron (mg)</string>
    <string name="title_protein_g">Protein (g)</string>
    <string name="title_saturated_fat_g">Saturated Fat (g)</string>
    <string name="title_sodium_mg">Sodium (mg)</string>
    <string name="title_sugar_g">Sugar (g)</string>
    <string name="title_zinc_mg">Zinc (mg)</string>
    <string name="title_advanced_search_options">Advanced Search Options</string>
    <string name="title_random_recipe_for_you">Random recipe for you!</string>
    <string name="title_recipe_saved">Recipe Saved!</string>
    <string name="title_recipe_removed_from_saved_recipes">Removed Recipe from Saved Recipes!</string>
    <string name="title_save">Save</string>
    <string name="title_no_saved_recipes">You have no saved Recipes!</string>

    <string-array name="cuisine_types">
        <item>@string/title_please_select</item>
        <item>African</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Jewish</item>
        <item>Korean</item>
        <item>Latin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>Southern</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="diet_types">
        <item>@string/title_please_select</item>
        <item>Gluten Free</item>
        <item>Ketogenic</item>
        <item>Vegetarian</item>
        <item>Lacto-Vegetarian</item>
        <item>Ovo-Vegetarian</item>
        <item>Vegan</item>
        <item>Pescetarian</item>
        <item>Paleo</item>
        <item>Primal</item>
        <item>Low FODMAP</item>
        <item>Whole30</item>
    </string-array>
    <string-array name="intolerance_types">
        <item>@string/title_please_select</item>
        <item>Dairy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Grain</item>
        <item>Peanut</item>
        <item>Seafood</item>
        <item>Sesame</item>
        <item>Shellfish</item>
        <item>Soy</item>
        <item>Sulfite</item>
        <item>Tree Nut</item>
        <item>Wheat</item>
    </string-array>
    <string-array name="meal_types">
        <item>@string/title_please_select</item>
        <item>Main Course</item>
        <item>Side Dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Marinade</item>
        <item>Fingerfood</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>
</resources>