<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipe.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_recipe_detail"
            app:destination="@id/navigation_recipe_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.recipe.ui.fragments.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_recipe_detail"
            app:destination="@id/navigation_recipe_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.recipe.ui.fragments.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" >
        <action
            android:id="@+id/action_navigation_saved_to_navigation_recipe_detail"
            app:destination="@id/navigation_recipe_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/navigation_saved" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.recipe.ui.fragments.recipeDetail.RecipeDetailFragment"
        android:label="@string/title_recipe_details"
        tools:layout="@layout/fragment_recipe_detail" >
        <argument
            android:name="recipeId"
            app:argType="integer" />
    </fragment>

</navigation>